Prepare for CI chapter early access release.
- Also link Chinese translation of interpreter chapter:
  https://github.com/aosabook/500lines/issues/168

--- a/tex/500L.tex
+++ b/tex/500L.tex
@@ -260,15 +260,27 @@
 \mainmatter
 
 
+\include{contingent}
+
+\include{same-origin-policy}
+
+\include{blockcode}
+
 \include{interpreter}
+
+\include{web-server}
 
 \include{static-analysis}
 
 \include{functionalDB}
 
+\include{flow-shop}
+
 \include{template-engine}
 
 \include{pedometer}
+
+\include{sampler}
 
 \include{spreadsheet}
 
@@ -277,6 +289,8 @@
 \include{data-store}
 
 \include{objmodel}
+
+\include{ci}
 
 \include{crawler}
 
