--- a/tex/dagoba.tex
+++ b/tex/dagoba.tex
@@ -180,8 +180,12 @@ children = function(x) { return E.reduce(
   function(acc, e) { return ~x.indexOf(e[0]) ? acc.concat(e[1]) : acc }, [] )}
 \end{verbatim}
 
-Now we can say something like
-\texttt{children(children(children(parents(parents(parents({[}8{]}))))))}.
+Now we can say something like:
+
+\begin{verbatim}
+children(children(children(parents(parents(parents([8]))))))
+\end{verbatim}
+
 It reads backwards and gets us lost in silly parens, but is otherwise
 pretty close to what we wanted. Take a minute to look at the code. Can
 you see any ways to improve it?
@@ -269,29 +273,25 @@ Dagoba.graph = function(V, E) {                 // the factory
 
 We'll accept two optional arguments: a list of vertices and a list of
 edges. JavaScript is rather lax about parameters, so all named
-parameters are optional and default to `undefined' if not supplied
-{[}footnote{]}. We will often have the vertices and edges before
-building the graph and use the V and E parameters, but it's also common
-to not have those at creation time and to build the graph up
-programmatically {[}footnote{]}.
-
-{[}footnote on supplied: It's also lax the other direction: all
-functions are variadic, and all arguments are available by position via
-the \texttt{arguments} object, which is almost like an array but not
-quite. (`Variadic' is just a fancy way of saying a function has
-indefinite arity. Which is a fancy way of saying it takes a variable
-number of variables.){]}
-
-{[}footnote on programmatically: The \texttt{Array.isArray} checks here
-are to distinguish our two different use cases, but in general we won't
-be doing many of the validations one would expect of production code in
-order to focus on the architecture instead of the trash bins.{]}
+parameters are optional and default to `undefined' if not
+supplied\footnote{It's also lax the other direction: all functions are
+  variadic, and all arguments are available by position via the
+  \texttt{arguments} object, which is almost like an array but not
+  quite. (`Variadic' is just a fancy way of saying a function has
+  indefinite arity. Which is a fancy way of saying it takes a variable
+  number of variables.)}. We will often have the vertices and edges
+before building the graph and use the V and E parameters, but it's also
+common to not have those at creation time and to build the graph up
+programmatically \footnote{The \texttt{Array.isArray} checks here are to
+  distinguish our two different use cases, but in general we won't be
+  doing many of the validations one would expect of production code in
+  order to focus on the architecture instead of the trash bins.}.
 
 Then we create a new object that has all of our prototype's strengths
-and none of its weaknesses*. We build a brand new array (one of the
-other basic JS data structures) for our edges, another for the vertices,
-a new object called vertexIndex and an id counter -- more on those
-latter two later. (Think: why can't we just put these in the prototype?)
+and none of its weaknesses. We build a brand new array (one of the other
+basic JS data structures) for our edges, another for the vertices, a new
+object called vertexIndex and an id counter -- more on those latter two
+later. (Think: why can't we just put these in the prototype?)
 
 Then we call addVertices and addEdges from inside our factory, so let's
 define those now.
@@ -907,8 +907,9 @@ many duplicates, however. In fact there would be at least four copies of
 Thor himself. (Can you think of a time when there might be more?)
 
 To resolve this we introduce a new pipetype called `unique'. Our new
-query \texttt{g.v('Thor').in().in().out().out().unique().run()} produces
-output in one-to-one correspondence with the grandchildren.
+query
+\linebreak \texttt{g.v('Thor').in().in().out().out().unique().run()}
+produces output in one-to-one correspondence with the grandchildren.
 
 \begin{verbatim}
 Dagoba.addPipetype('unique', function(graph, args, gremlin, state) {
@@ -1215,7 +1216,7 @@ Dagoba.gotoVertex = function(gremlin, vertex) {         // clone the gremlin
 Note that this function actually returns a brand new gremlin -- a clone
 of the old one, sent to our desired destination. That means a gremlin
 can sit on a vertex while its clones are sent out to explore many other
-vertices. This is exactly what happens in simpleTraversal.
+vertices. This is exactly what happens in \texttt{simpleTraversal}.
 
 As an example of possible enhancements, we could add a bit of state to
 keep track of every vertex the gremlin visits, and then add new
@@ -1276,7 +1277,8 @@ one, and any $O(n)$ operations that directly rely on it into $O(n^2)$
 operations.
 
 \begin{verbatim}
-Dagoba.G.searchVertices = function(filter) {            // find vertices that match obj's key-value pairs
+// find vertices that match obj's key-value pairs
+Dagoba.G.searchVertices = function(filter) {            
   return this.vertices.filter(function(vertex) {
     return Dagoba.objectFilter(vertex, filter)
   })
@@ -1537,9 +1539,10 @@ we go back to thinking of this as a proper `maybe'\footnote{We call it
   gremlin, or it could be something else. Also because originally it was
   either a gremlin or \texttt{Nothing}.}.
 
-If the step before us isn't `done'{[}\^{}footnoteT{]} we'll move the
-head backward and try again. Otherwise, we mark ourselves as `done' and
-let the head naturally fall forward.
+If the step before us isn't `done'\footnote{Recall that done starts at
+  \texttt{-1}, so the first step's predecessor is always done.} we'll
+move the head backward and try again. Otherwise, we mark ourselves as
+`done' and let the head naturally fall forward.
 
 \begin{verbatim}
     if(maybe_gremlin == 'done') {           // 'done' tells us the pipe is finished
@@ -1623,10 +1626,9 @@ Now we can add query transformers to our system. A query transformer is
 a function that accepts program and returns a program, plus a priority
 level. Higher priority transformers are placed closer to the front of
 the list. We're ensuring fun is a function, because we're going to
-evaluate it later{[}\^{}footnoteV{]}. {[}\^{}footnoteV{]}: Note that
-we're keeping the domain of the priority parameter open, so it can be an
-integer, a rational, a negative number, or even things like Infinity or
-NaN.
+evaluate it later \footnote{Note that we're keeping the domain of the
+  priority parameter open, so it can be an integer, a rational, a
+  negative number, or even things like Infinity or NaN.}.
 
 We'll assume there won't be an enormous number of transformer additions,
 and walk the list linearly to add a new one. We'll leave a note in case
@@ -1761,8 +1763,13 @@ Dagoba.addAlias(
   'children', 'unique'])
 \end{verbatim}
 
-Now instead of
-\texttt{g.v('Forseti').parents().as('parents').parents().children().except('parents').children().unique()}
+Now instead of:
+
+\begin{verbatim}
+g.v('Forseti').parents().as('parents').parents().children()
+                        .except('parents').children().unique()
+\end{verbatim}
+
 we can just say \texttt{g.v('Forseti').cousins()}.
 
 We've introduced a bit of a pickle, though: while our addAlias function
@@ -1826,11 +1833,11 @@ time cost. One downside to this approach is that the pointers work best
 when the whole graph is in memory on the same machine. Effectively
 sharding a graph database across multiple machines is still an active
 area of research\footnote{Sharding a graph database requires
-  partitioning the graph. Optimal graph partitioning is NP-hard, even
-  for simple graphs like trees and grids, and good approximations also
-  have exponential asymptotic complexity. See
-  ``http://arxiv.org/pdf/1311.3144v2.pdf,
-  http://dl.acm.org/citation.cfm?doid=1007912.1007931{]} {]}}.
+  partitioning the graph.
+  \href{http://dl.acm.org/citation.cfm?doid=1007912.1007931}{Optimal
+  graph partitioning is NP-hard}, even for simple graphs like trees and
+  grids, and good approximations also have exponential
+  \href{http://arxiv.org/pdf/1311.3144v2.pdf}{asymptotic complexity}.}.
 
 We can see this at work in the microcosm of Dagoba if we replace the
 functions for finding edges. Here's a naive version that searches
@@ -1838,15 +1845,19 @@ through all the edges in linear time. It harkens back to our very first
 implementation, but uses all the structures we've since built.
 
 \begin{verbatim}
-Dagoba.G.findInEdges  = function(vertex) { return this.edges.filter(function(edge) {return edge._in._id  == vertex._id} ) }
-Dagoba.G.findOutEdges = function(vertex) { return this.edges.filter(function(edge) {return edge._out._id == vertex._id} ) }
+Dagoba.G.findInEdges  = function(vertex) { 
+  return this.edges.filter(function(edge) {return edge._in._id  == vertex._id} ) 
+}
+Dagoba.G.findOutEdges = function(vertex) { 
+  return this.edges.filter(function(edge) {return edge._out._id == vertex._id} ) 
+}
 \end{verbatim}
 
 We can add an index for edges, which gets us most of the way there with
 small graphs but has all the classic indexing issues for large ones.
 
 \begin{verbatim}
-Dagoba.G.findInEdges  = function(vertex) { return this.inEdgeIndex [vertex._id]  }
+Dagoba.G.findInEdges  = function(vertex) { return this.inEdgeIndex [vertex._id] }
 Dagoba.G.findOutEdges = function(vertex) { return this.outEdgeIndex[vertex._id] }
 \end{verbatim}
 
@@ -1858,13 +1869,12 @@ Dagoba.G.findInEdges  = function(vertex) { return vertex._in  }
 Dagoba.G.findOutEdges = function(vertex) { return vertex._out }
 \end{verbatim}
 
-Run these yourself to experience the graph database difference.
-
-{[}footnote: In modern JavaScript engines filtering a list is quite fast
--- for small graphs the naive version can actually be faster than the
-index-free version due to the underlying data structures and the way the
-code is JIT compiled. Try it with different sizes of graphs to see how
-the two approaches scale.{]}
+Run these yourself to experience the graph database difference\footnote{In
+  modern JavaScript engines filtering a list is quite fast -- for small
+  graphs the naive version can actually be faster than the index-free
+  version due to the underlying data structures and the way the code is
+  JIT compiled. Try it with different sizes of graphs to see how the two
+  approaches scale.}.
 
 \aosasecti{Serialization}\label{serialization}
 
@@ -1883,9 +1893,9 @@ JSON replacer functions to the rescue.
 
 The \texttt{JSON.stringify} function takes a value to stringify, but it
 also takes two additional parameters: a replacer function and a
-whitespace number {[}footnote: Pro tip: given a deep tree
-\texttt{deep\_tree}, running \texttt{JSON.stringify(deep\_tree, 0, 2)}
-in the JS console is a quick way to make it human readable{]}. The
+whitespace number\footnote{Pro tip: given a deep tree
+  \texttt{deep\_tree}, running \texttt{JSON.stringify(deep\_tree, 0, 2)}
+  in the JS console is a quick way to make it human readable.} . The
 replacer allows you to customize how the stringification proceeds.
 
 We need to treat the vertices and edges a bit differently, so we're
@@ -2036,23 +2046,40 @@ fashion.
 \aosasecti{Future directions}\label{future-directions}
 
 We saw one way of gathering ancestors earlier:
-\texttt{g.v('Thor').out().as('parent').out().as('grandparent').out().as('great-grandparent').merge({[}'parent', 'grandparent', 'great-grandparent'{]}).run()}
+
+\begin{verbatim}
+g.v('Thor').out().as('parent').out()
+                 .as('grandparent').out()
+                 .as('great-grandparent')
+                 .merge(['parent', 'grandparent', 'great-grandparent'])
+                 .run()
+\end{verbatim}
 
 This is pretty clumsy, and doesn't scale well -- what if we wanted six
 layers of ancestors? Or to look through an arbitrary number of ancestors
 until we found what we wanted?
 
 It'd be nice if we could say something like this instead:
-\texttt{g.v('Thor').out().all().times(3).run()}. What we'd like to get
-out of this is something like the query above -- maybe
-\texttt{g.v('Thor').out().as('a').out().as('b').out().as('c').merge({[}'a', 'b', 'c'{]}).run()}
-after the query transformers have all run.
+
+\begin{verbatim}
+g.v('Thor').out().all().times(3).run()
+\end{verbatim}
+
+What we'd like to get out of this is something like the query above
+after the query transformers have all run:
+
+\begin{verbatim}
+g.v('Thor').out().as('a').out()
+                 .as('b').out()
+                 .as('c').merge(['a', 'b', 'c'])
+                 .run()`
+\end{verbatim}
 
 We could run the \texttt{times} transformer first, to produce
-\texttt{g.v('Thor').out().all().out().all().out().all().run()}. Then run
-the \texttt{all} transformer and have it transform each \texttt{all}
-into a uniquely labeled \texttt{as}, and put a \texttt{merge} after the
-last \texttt{as}.
+\linebreak \texttt{g.v('Thor').out().all().out().all().out().all().run()}.
+Then run the \texttt{all} transformer and have it transform each
+\texttt{all} into a uniquely labeled \texttt{as}, and put a
+\texttt{merge} after the last \texttt{as}.
 
 There's a few problems with this, though. For one, this as/merge
 technique only works if every pathway is present in the graph -- if
@@ -2088,35 +2115,39 @@ There's still the issue of searching through an unbounded number of
 ancestors -- for example, how do we find out which of Ymir's descendants
 are scheduled to survive Ragnarök? We could make individual queries like
 \texttt{g.v('Ymir').in().filter(\{survives: true\})} and
-\texttt{g.v('Ymir').in().in().in().in().filter(\{survives: true\})} and
-manually collect the results ourselves, but that's pretty awful.
+\newline \texttt{g.v('Ymir').in().in().in().in().filter(\{survives: true\})}
+and manually collect the results ourselves, but that's pretty awful.
 
-We'd like to use an adverb like this:
-\texttt{g.v('Ymir').in().filter(\{survives: true\}).every()}, which
-would work like \texttt{all}+\texttt{times} but without enforcing a
+We'd like to use adverbs like this:
+
+\begin{verbatim}
+g.v('Ymir').in().filter({survives: true}).every()
+\end{verbatim}
+
+This would work like \texttt{all}+\texttt{times} but without enforcing a
 limit. We may want to impose a particular strategy on the traversal,
 though, like a stolid BFS or YOLO DFS, so
-\texttt{g.v('Ymir').in().filter(\{survives: true\}).bfs()} would be more
-flexible. Phrasing it this way allows us to state complicated queries
-like ``check for Ragnarök survivors, skipping every other generation''
-in a straightforward fashion:
+\newline \texttt{g.v('Ymir').in().filter(\{survives: true\}).bfs()}
+would be more flexible. Phrasing it this way allows us to state
+complicated queries like ``check for Ragnarök survivors, skipping every
+other generation'' in a straightforward fashion:
 \texttt{g.v('Ymir').in().filter(\{survives: true\}).in().bfs()}.
 
 \aosasecti{Wrapping up}\label{wrapping-up}
 
 So what have we learned? Graph databases are great for storing
-interconnected* data that you plan to query via graph traversals. Adding
-non-strict semantics allows for a fluent interface over queries you
-could never express in an eager system for performance reasons, and
-allows you to cross async boundaries. Time makes things complicated, and
-time from multiple perspectives (i.e.~concurrency) makes things very
-complicated, so whenever we can avoid introducing a temporal dependency
-(e.g.~state, observable effects, etc) we make reasoning about our system
-easier. Building in a simple, decoupled and painfully unoptimized style
-leaves the door open for global optimizations later on, and using a
-driver loop allows for orthogonal optimizations -- each without
-introducing the brittleness and complexity that is the hallmark of most
-optimization techniques.
+interconnected{[}\^{}footnoteAC{]} data that you plan to query via graph
+traversals. Adding non-strict semantics allows for a fluent interface
+over queries you could never express in an eager system for performance
+reasons, and allows you to cross async boundaries. Time makes things
+complicated, and time from multiple perspectives (i.e.~concurrency)
+makes things very complicated, so whenever we can avoid introducing a
+temporal dependency (e.g.~state, observable effects, etc) we make
+reasoning about our system easier. Building in a simple, decoupled and
+painfully unoptimized style leaves the door open for global
+optimizations later on, and using a driver loop allows for orthogonal
+optimizations -- each without introducing the brittleness and complexity
+that is the hallmark of most optimization techniques.
 
 That last point can't be overstated: keep it simple. Eschew optimization
 in favor of simplicity. Work hard to achieve simplicity by finding the
@@ -2127,14 +2158,6 @@ are building, fight to keep complexity from polluting it. Build hooks
 for attaching additional functionality, and maintain your abstraction
 barriers at all costs. Using these techniques well is not easy, but they
 can give you leverage over otherwise intractable problems.
-
-{[}footnote on interconnected: Not \emph{too} interconnected, though --
-you'd like the number of edges to grow in direct proportion to the
-number of vertices. In other words the average number of edges connected
-to a vertex shouldn't vary with the size of the graph. Most systems we'd
-consider putting in a graph database already have this property: if we
-add 100,000 Nigerian films to our movie database that doesn't increase
-the degree of the Kevin Bacon vertex.{]}
 
 \aosasectii{Acknowledgements}\label{acknowledgements}
 
